Minor tweaks.